# idealGasSim

./: .clang-format  .gitignore  CMakeLists.txt  README.md  codeStructure.txt  compileCommand.txt  coutDump.txt  demo  errorLog.txt  eseguibile  getVideoTest.cpp  getVideoTestSeq.cpp  graphicsTest  graphicsTest.cpp  graphicsTests  idealGasSim  main.cpp  mainSketch.cpp  mainTest  mainThread.cpp  makeInputFile.cpp  namespacer.hpp  report.md  tempMainCompileCmd.txt  test.cpp  testoRelazione.md  todo.txt  warnings.txt
.shitCode/: graphicsTest.cpp  main.cpp  namespacer.hpp
backup/: main.cpp
configs/: gasSim_demo.ini  gasSim_sus.ini  gasSim_template.ini  gasSim_test.ini
gasSim/: Camera.cpp  Camera.hpp  Collision.cpp  Collision.hpp  DataProcessing.hpp  Gas.cpp  Gas.hpp  GasData.cpp  GasData.hpp  Graphics.hpp  Input.hpp  Particle.cpp  Particle.hpp  PhysicsEngine.hpp  RenderStyle.cpp  RenderStyle.hpp  TdStats.cpp  TdStats.hpp  Vector3.hpp  algorithms.hpp  gasSim_demo.ini  graphics.cpp  graphics.hpp  input.cpp  input.hpp  main.cpp  mainTest  output.cpp  output.hpp  physicsEngine.cpp  physicsEngine.hpp  statistics.cpp  statistics.hpp  tempMainCompileCmd.txt
gasSim/DataProcessing/: GasData.cpp  GasData.hpp  SDPgetVideo.cpp  SimDataPipeline.cpp  SimDataPipeline.hpp  TdStats.cpp  TdStats.hpp
gasSim/Graphics/: Camera.cpp  Camera.hpp  RenderStyle.cpp  RenderStyle.hpp
gasSim/Input/: Input.cpp  Input.hpp
gasSim/Libs/: INIReader.h  cxxopts.hpp
gasSim/PhysicsEngine/: Collision.cpp  Collision.hpp  GSVector.hpp  Gas.cpp  Gas.hpp  Particle.cpp  Particle.hpp  Vector3.hpp
gasSimOld/: algorithms.hpp  graphics.hpp  input.cpp  output.hpp  physicsEngine.cpp  physicsEngine.hpp
gas_sim/: graphics.hpp  input.hpp  output.hpp  physics_engine.cpp  physics_engine.hpp
inputs/: input.root
outputs/: output.root
report/: report.md
report/latex/: math.dvi  math.tex
report/latex/eq1/: eq1.dvi  eq1.tex
report/latex/eq2/: eq2.dvi  eq2.tex
report/latex/eq3/: eq3.dvi  eq3.tex
report/latex/sol1/: sol1.dvi  sol1.tex
report/latex/sol2/: sol2.dvi  sol2.tex
report/latex/sol3/: sol3.dvi  sol3.tex
report/latex/sys1/: sys1.dvi  sys1.tex
shit_code/: executable  main.cpp
shit_code/idealGasSim2/: main.cpp
shit_code/idealGasSim2/gas_sim2/: input.hpp  output.hpp  physics_engine.hpp
shit_code/idealGasSim2/unit_testing/: unit_tests.cpp
unitTesting/: compileCommand.txt  getVideoTest.cpp  testingAddons.cpp  testingAddons.hpp  unitTests  unitTests.cpp
unitTesting/assets/: input.root
unit_testing/: unit_tests.cpp
